# ferris-bot

./: .gitignore  .gitmodules  .token  Cargo.toml  Dockerfile  LICENSE  README.md  chat_code.rs  docker-compose.yml  dprint.json  rust-toolchain  rust-toolchain.toml  rustfmt.toml  sample.ferrisbot.toml  sample.twitchauth.toml  scrap.rs
assets/: bazylia.txt  dave.txt  words.txt  zoya.txt
src/: discord_commands.rs  discord_events.rs  main.rs  queue_manager.rs  token_storage.rs  twitch_auth.rs  word_stonks.rs
