[package]
name = "ferris_bot"
version = "0.0.1-alpha"
authors = ["stuckoverflow2021"]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
chrono = "0.4"
futures = "0.3"
itertools = "0.10.0"
giphy-api = { git = "https://github.com/stuck-overflow/cio/", branch = "master" }
log = "0.4.14"
oauth2 = "4.0.0-alpha"
obws = { git = "https://github.com/stuck-overflow/obws/", branch = "main" }
rand = "0.8"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.11.0"
structopt = "0.3.13"
surf = "2.2"
tiny_http = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2"
toml = "0.4.2"
twitch_api2 = { features = ["client", "helix", "surf_client", "twitch_oauth2"], git = "https://github.com/Emilgardis/twitch_api2/", branch = "master"  }
twitch-irc = { version = "2.2.0", features = ["refreshing-token"] }
twitch_oauth2_auth_flow = { git = "https://github.com/stuck-overflow/twitch_oauth2_auth_flow", branch = "main" }
url = "2.2.0"

[dev-dependencies]
assert_matches = "1.5"
mktemp = "0.4"
