[package]
name = "ferris_bot"
version = "0.0.1-alpha"
authors = [ "stuckoverflow2021" ]
edition = "2018"

[dependencies]
async-trait = "0.1.42"
chrono = "0.4"
futures = "0.3"
itertools = "0.10.0"
log = "0.4.14"
oauth2 = "4.0.0"
rand = "0.8.3"
regex = "1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
simple_logger = "1.11.0"
structopt = "0.3.13"
surf = "2.2"
tiny_http = "0.8.2"
tokio = "1"
toml = "0.5.8"
twitch-irc = { version = "2.2.0", features = [ "refreshing-token" ] }
twitch_api2 = { version = "0.5.0", features = [ "client", "helix", "surf_client", "twitch_oauth2" ] }
twitch_oauth2_auth_flow = { version = "0.0.1-alpha" }
url = "2.2.0"

[dev-dependencies]
assert_matches = "1.5"
mktemp = "0.4"
